--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -11,7 +11,7 @@ $txt-accent: #ACB1B4;
 $form-placeholder: #BCC1C3;
 // form placeholder text
 // Global colours
-$accent-color: #D2691E;
+$accent-color: #FF6347;
 // global accent colour
 $accent-color-hover: #d3b56a;
 // global accent colour hover
