Added hover colors

--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -13,7 +13,7 @@ $form-placeholder: #BCC1C3;
 // Global colours
 $accent-color: #FF6347;
 // global accent colour
-$accent-color-hover: #d3b56a;
+$accent-color-hover: #FF6347;
 // global accent colour hover
 $white-color: #fff;
 $black-color: #000;
