--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -11,9 +11,9 @@ $txt-accent: #ACB1B4;
 $form-placeholder: #BCC1C3;
 // form placeholder text
 // Global colours
-$accent-color: #FF6347;
+$accent-color: #5151fb;
 // global accent colour
-$accent-color-hover: #FF6347;
+$accent-color-hover: #5151fb;
 // global accent colour hover
 $white-color: #fff;
 $black-color: #000;
