Changed rsvp button

--- a/sass/partials/_buttons.scss
+++ b/sass/partials/_buttons.scss
@@ -31,13 +31,13 @@
 }
 .btn-fill {
 	color: $white-color;
-	border: solid 2px $accent-color;
+	border: solid 2px #FFD700;
 	-moz-border-radius: 40px;
 	-webkit-border-radius: 40px;
 	border-radius: 40px;
 	display: inline-block;
 	text-transform: uppercase;
-	background-color: $accent-color;
+	background-color: #FFD700;
 }
 .btn-fill:hover, .btn-fill:focus {
 	color: $white-color;
